--- a/HeroesOfPymoli/HeroesOfPymoli.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli.ipynb
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -794,15 +794,12 @@
        "40+                           $3.19  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#age_bins = [0, 9.5, 14.5, 19.5, 24.5, 29.5, 34.5, 39.5, 99]\n",
-    "#bin_labels = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\", \"30-34\", \"35-39\", \"40+\"]\n",
-    "\n",
     "#create some blank DataFrames for moving our data around and displaying\n",
     "purchase_data_age = pd.DataFrame()\n",
     "purchase_data_age_binned = pd.DataFrame()\n",
@@ -872,10 +869,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Average Purchase Price</th>\n",
+       "      <th>Total Purchase Price</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SN</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Lisosia93</th>\n",
+       "      <td>5</td>\n",
+       "      <td>$3.79</td>\n",
+       "      <td>$18.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Idastidru52</th>\n",
+       "      <td>4</td>\n",
+       "      <td>$3.86</td>\n",
+       "      <td>$15.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chamjask73</th>\n",
+       "      <td>3</td>\n",
+       "      <td>$4.61</td>\n",
+       "      <td>$13.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iral74</th>\n",
+       "      <td>4</td>\n",
+       "      <td>$3.40</td>\n",
+       "      <td>$13.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iskadarya95</th>\n",
+       "      <td>3</td>\n",
+       "      <td>$4.37</td>\n",
+       "      <td>$13.10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Purchase Count Average Purchase Price Total Purchase Price\n",
+       "SN                                                                     \n",
+       "Lisosia93                 5                  $3.79               $18.96\n",
+       "Idastidru52               4                  $3.86               $15.45\n",
+       "Chamjask73                3                  $4.61               $13.83\n",
+       "Iral74                    4                  $3.40               $13.62\n",
+       "Iskadarya95               3                  $4.37               $13.10"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#some blank DataFrames\n",
+    "spender_df_display = pd.DataFrame()\n",
+    "print_to_screen = pd.DataFrame()\n",
+    "\n",
+    "#slice purchase_data down to what we need\n",
+    "spender_columns = [\"Purchase ID\", \"SN\", \"Price\"]\n",
+    "spenders_df = purchase_data[spender_columns]\n",
+    "\n",
+    "#group SNs by purchases\n",
+    "spender_df_display[\"Purchase Count\"] = spenders_df.groupby(by=[\"SN\"])[\"Purchase ID\"].count()\n",
+    "\n",
+    "#placeholder\n",
+    "spender_df_display[\"Average Purchase Price\"] = spender_df_display[\"Purchase Count\"]\n",
+    "\n",
+    "#sum total purchases by SN\n",
+    "spender_df_display[\"Total Purchase Price\"] = spenders_df.groupby(by=[\"SN\"])[\"Price\"].sum()\n",
+    "\n",
+    "#figure average purchases by SN\n",
+    "spender_df_display[\"Average Purchase Price\"] = spender_df_display[\"Total Purchase Price\"] / spender_df_display[\"Purchase Count\"]\n",
+    "\n",
+    "#find the five top spenders, orginially I tried to do this entirely in the spender_df_display DF but had issues with sorting the strings so just created a second DF\n",
+    "print_to_screen = spender_df_display.nlargest(5, \"Total Purchase Price\")\n",
+    "\n",
+    "#format currency\n",
+    "print_to_screen[\"Total Purchase Price\"] = print_to_screen[\"Total Purchase Price\"].apply(kev_currency_format)\n",
+    "print_to_screen[\"Average Purchase Price\"] = print_to_screen[\"Average Purchase Price\"].apply(kev_currency_format)\n",
+    "\n",
+    "#print to screen\n",
+    "print_to_screen"
+   ]
   },
   {
    "cell_type": "markdown",
