--- a/HeroesOfPymoli/HeroesOfPymoli.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli.ipynb
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +949,7 @@
        "Iskadarya95               3                  $4.37               $13.10"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,10 +1018,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Purchase ID</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Item ID</th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <th>Splinter</th>\n",
+       "      <td>1149</td>\n",
+       "      <td>74</td>\n",
+       "      <td>5.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <th>Crucifer</th>\n",
+       "      <td>1523</td>\n",
+       "      <td>89</td>\n",
+       "      <td>11.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <th>Verdict</th>\n",
+       "      <td>2006</td>\n",
+       "      <td>143</td>\n",
+       "      <td>14.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <th>Phantomlight</th>\n",
+       "      <td>2087</td>\n",
+       "      <td>155</td>\n",
+       "      <td>14.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <th>Bloodlord's Fetish</th>\n",
+       "      <td>1885</td>\n",
+       "      <td>124</td>\n",
+       "      <td>8.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <th>Oathbreaker, Last Hope of the Breaking Storm</th>\n",
+       "      <td>4960</td>\n",
+       "      <td>287</td>\n",
+       "      <td>50.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179</th>\n",
+       "      <th>Wolf, Promise of the Moonwalker</th>\n",
+       "      <td>1948</td>\n",
+       "      <td>126</td>\n",
+       "      <td>26.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181</th>\n",
+       "      <th>Reaper's Toll</th>\n",
+       "      <td>1278</td>\n",
+       "      <td>109</td>\n",
+       "      <td>8.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>182</th>\n",
+       "      <th>Toothpick</th>\n",
+       "      <td>1327</td>\n",
+       "      <td>67</td>\n",
+       "      <td>12.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>183</th>\n",
+       "      <th>Dragon's Greatsword</th>\n",
+       "      <td>1488</td>\n",
+       "      <td>66</td>\n",
+       "      <td>3.27</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>179 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                      Purchase ID  Age  Price\n",
+       "Item ID Item Name                                                            \n",
+       "0       Splinter                                             1149   74   5.12\n",
+       "1       Crucifer                                             1523   89  11.77\n",
+       "2       Verdict                                              2006  143  14.88\n",
+       "3       Phantomlight                                         2087  155  14.94\n",
+       "4       Bloodlord's Fetish                                   1885  124   8.50\n",
+       "...                                                           ...  ...    ...\n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm         4960  287  50.76\n",
+       "179     Wolf, Promise of the Moonwalker                      1948  126  26.88\n",
+       "181     Reaper's Toll                                        1278  109   8.30\n",
+       "182     Toothpick                                            1327   67  12.09\n",
+       "183     Dragon's Greatsword                                  1488   66   3.27\n",
+       "\n",
+       "[179 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "most_popular_items = pd.DataFrame()\n",
+    "\n",
+    "most_popular_item_columns = [\"Purchase ID\", \"Item ID\", \"Item Name\", \"Price\"]\n",
+    "\n",
+    "most_popular_items = purchase_data[most_popular_item_columns]\n",
+    "\n",
+    "most_popular_items_display = pd.DataFrame()\n",
+    "\n",
+    "most_popular_items_display = purchase_data.groupby([\"Item ID\", \"Item Name\"]).sum()\n",
+    "\n",
+    "most_popular_items_display\n",
+    "\n",
+    "#most_popular_items\n",
+    "\n",
+    "#spender_df_display[\"Purchase Count\"] = spenders_df.groupby(by=[\"SN\"])[\"Purchase ID\"].count()\n"
+   ]
   },
   {
    "cell_type": "markdown",
