--- a/HeroesOfPymoli/HeroesOfPymoli.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli.ipynb
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1043,9 +1043,9 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th>Purchase ID</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Price</th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Item Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Item ID</th>\n",
@@ -1057,126 +1057,113 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <th>Splinter</th>\n",
-       "      <td>1149</td>\n",
-       "      <td>74</td>\n",
-       "      <td>5.12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <th>Crucifer</th>\n",
-       "      <td>1523</td>\n",
-       "      <td>89</td>\n",
-       "      <td>11.77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <th>Verdict</th>\n",
-       "      <td>2006</td>\n",
-       "      <td>143</td>\n",
-       "      <td>14.88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <th>Phantomlight</th>\n",
-       "      <td>2087</td>\n",
-       "      <td>155</td>\n",
-       "      <td>14.94</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <th>Bloodlord's Fetish</th>\n",
-       "      <td>1885</td>\n",
-       "      <td>124</td>\n",
-       "      <td>8.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>92</th>\n",
+       "      <th>Final Critic</th>\n",
+       "      <td>13</td>\n",
+       "      <td>$4.61</td>\n",
+       "      <td>$59.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>178</th>\n",
        "      <th>Oathbreaker, Last Hope of the Breaking Storm</th>\n",
-       "      <td>4960</td>\n",
-       "      <td>287</td>\n",
-       "      <td>50.76</td>\n",
+       "      <td>12</td>\n",
+       "      <td>$4.23</td>\n",
+       "      <td>$50.76</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>179</th>\n",
-       "      <th>Wolf, Promise of the Moonwalker</th>\n",
-       "      <td>1948</td>\n",
-       "      <td>126</td>\n",
-       "      <td>26.88</td>\n",
+       "      <th>145</th>\n",
+       "      <th>Fiery Glass Crusader</th>\n",
+       "      <td>9</td>\n",
+       "      <td>$4.58</td>\n",
+       "      <td>$41.22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>181</th>\n",
-       "      <th>Reaper's Toll</th>\n",
-       "      <td>1278</td>\n",
-       "      <td>109</td>\n",
-       "      <td>8.30</td>\n",
+       "      <th>132</th>\n",
+       "      <th>Persuasion</th>\n",
+       "      <td>9</td>\n",
+       "      <td>$3.22</td>\n",
+       "      <td>$28.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>182</th>\n",
-       "      <th>Toothpick</th>\n",
-       "      <td>1327</td>\n",
-       "      <td>67</td>\n",
-       "      <td>12.09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>183</th>\n",
-       "      <th>Dragon's Greatsword</th>\n",
-       "      <td>1488</td>\n",
-       "      <td>66</td>\n",
-       "      <td>3.27</td>\n",
+       "      <th>108</th>\n",
+       "      <th>Extraction, Quickblade Of Trembling Hands</th>\n",
+       "      <td>9</td>\n",
+       "      <td>$3.53</td>\n",
+       "      <td>$31.77</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>179 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                      Purchase ID  Age  Price\n",
-       "Item ID Item Name                                                            \n",
-       "0       Splinter                                             1149   74   5.12\n",
-       "1       Crucifer                                             1523   89  11.77\n",
-       "2       Verdict                                              2006  143  14.88\n",
-       "3       Phantomlight                                         2087  155  14.94\n",
-       "4       Bloodlord's Fetish                                   1885  124   8.50\n",
-       "...                                                           ...  ...    ...\n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm         4960  287  50.76\n",
-       "179     Wolf, Promise of the Moonwalker                      1948  126  26.88\n",
-       "181     Reaper's Toll                                        1278  109   8.30\n",
-       "182     Toothpick                                            1327   67  12.09\n",
-       "183     Dragon's Greatsword                                  1488   66   3.27\n",
+       "                                                      Purchase Count  \\\n",
+       "Item ID Item Name                                                      \n",
+       "92      Final Critic                                              13   \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm              12   \n",
+       "145     Fiery Glass Crusader                                       9   \n",
+       "132     Persuasion                                                 9   \n",
+       "108     Extraction, Quickblade Of Trembling Hands                  9   \n",
        "\n",
-       "[179 rows x 3 columns]"
+       "                                                     Item Price  \\\n",
+       "Item ID Item Name                                                 \n",
+       "92      Final Critic                                      $4.61   \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm      $4.23   \n",
+       "145     Fiery Glass Crusader                              $4.58   \n",
+       "132     Persuasion                                        $3.22   \n",
+       "108     Extraction, Quickblade Of Trembling Hands         $3.53   \n",
+       "\n",
+       "                                                     Total Purchase Value  \n",
+       "Item ID Item Name                                                          \n",
+       "92      Final Critic                                               $59.99  \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm               $50.76  \n",
+       "145     Fiery Glass Crusader                                       $41.22  \n",
+       "132     Persuasion                                                 $28.99  \n",
+       "108     Extraction, Quickblade Of Trembling Hands                  $31.77  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "most_popular_items = pd.DataFrame()\n",
-    "\n",
-    "most_popular_item_columns = [\"Purchase ID\", \"Item ID\", \"Item Name\", \"Price\"]\n",
-    "\n",
-    "most_popular_items = purchase_data[most_popular_item_columns]\n",
-    "\n",
+    "#create some blank Dataframes\n",
+    "most_popular_items_sum = pd.DataFrame()\n",
+    "most_popular_items_count = pd.DataFrame()\n",
     "most_popular_items_display = pd.DataFrame()\n",
     "\n",
-    "most_popular_items_display = purchase_data.groupby([\"Item ID\", \"Item Name\"]).sum()\n",
+    "#group the items by Item ID and Item Name, summing the price and counting the purchases\n",
+    "most_popular_items_sum = purchase_data.groupby([\"Item ID\", \"Item Name\"]).sum()\n",
+    "most_popular_items_count = purchase_data.groupby([\"Item ID\", \"Item Name\"]).count()\n",
     "\n",
-    "most_popular_items_display\n",
+    "#pull the purchase count from the count of purchase ID\n",
+    "most_popular_items_display[\"Purchase Count\"] = most_popular_items_count[\"Purchase ID\"]\n",
     "\n",
-    "#most_popular_items\n",
+    "#placeholder\n",
+    "most_popular_items_display[\"Item Price\"] = most_popular_items_count[\"Purchase ID\"]\n",
     "\n",
-    "#spender_df_display[\"Purchase Count\"] = spenders_df.groupby(by=[\"SN\"])[\"Purchase ID\"].count()\n"
+    "#pull the sum of price\n",
+    "most_popular_items_display[\"Total Purchase Value\"] = most_popular_items_sum[\"Price\"]\n",
+    "\n",
+    "#figure the item price by dividing total price / purchase count\n",
+    "most_popular_items_display[\"Item Price\"] = most_popular_items_display[\"Total Purchase Value\"] / most_popular_items_display[\"Purchase Count\"]\n",
+    "\n",
+    "#this is for the next section\n",
+    "#simply copy the values from the most_popular DF, this is done before currency formatting or sorting to prevent any issues\n",
+    "most_profitable_items = pd.DataFrame()\n",
+    "most_profitable_items[\"Purchase Count\"] = most_popular_items_display[\"Purchase Count\"]\n",
+    "most_profitable_items[\"Item Price\"] = most_popular_items_display[\"Item Price\"]\n",
+    "most_profitable_items[\"Total Purchase Value\"] = most_popular_items_display[\"Total Purchase Value\"]\n",
+    "\n",
+    "#sort the DF by purchase count\n",
+    "most_popular_items_display.sort_values([\"Purchase Count\"], ascending=False, inplace=True)\n",
+    "\n",
+    "#apply currency formatting\n",
+    "most_popular_items_display[\"Total Purchase Value\"] = most_popular_items_display[\"Total Purchase Value\"].apply(kev_currency_format)\n",
+    "most_popular_items_display[\"Item Price\"] = most_popular_items_display[\"Item Price\"].apply(kev_currency_format)\n",
+    "\n",
+    "#print to screen\n",
+    "most_popular_items_display.head()"
    ]
   },
   {
@@ -1202,12 +1189,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Item Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Item ID</th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <th>Final Critic</th>\n",
+       "      <td>13</td>\n",
+       "      <td>$4.61</td>\n",
+       "      <td>$59.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <th>Oathbreaker, Last Hope of the Breaking Storm</th>\n",
+       "      <td>12</td>\n",
+       "      <td>$4.23</td>\n",
+       "      <td>$50.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <th>Nirvana</th>\n",
+       "      <td>9</td>\n",
+       "      <td>$4.90</td>\n",
+       "      <td>$44.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <th>Fiery Glass Crusader</th>\n",
+       "      <td>9</td>\n",
+       "      <td>$4.58</td>\n",
+       "      <td>$41.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <th>Singed Scalpel</th>\n",
+       "      <td>8</td>\n",
+       "      <td>$4.35</td>\n",
+       "      <td>$34.80</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                      Purchase Count  \\\n",
+       "Item ID Item Name                                                      \n",
+       "92      Final Critic                                              13   \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm              12   \n",
+       "82      Nirvana                                                    9   \n",
+       "145     Fiery Glass Crusader                                       9   \n",
+       "103     Singed Scalpel                                             8   \n",
+       "\n",
+       "                                                     Item Price  \\\n",
+       "Item ID Item Name                                                 \n",
+       "92      Final Critic                                      $4.61   \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm      $4.23   \n",
+       "82      Nirvana                                           $4.90   \n",
+       "145     Fiery Glass Crusader                              $4.58   \n",
+       "103     Singed Scalpel                                    $4.35   \n",
+       "\n",
+       "                                                     Total Purchase Value  \n",
+       "Item ID Item Name                                                          \n",
+       "92      Final Critic                                               $59.99  \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm               $50.76  \n",
+       "82      Nirvana                                                    $44.10  \n",
+       "145     Fiery Glass Crusader                                       $41.22  \n",
+       "103     Singed Scalpel                                             $34.80  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#sort by Total Purchase Value\n",
+    "most_profitable_items.sort_values([\"Total Purchase Value\"], ascending=False, inplace=True)\n",
+    "\n",
+    "#apply currency formatting\n",
+    "most_profitable_items[\"Total Purchase Value\"] = most_profitable_items[\"Total Purchase Value\"].apply(kev_currency_format)\n",
+    "most_profitable_items[\"Item Price\"] = most_profitable_items[\"Item Price\"].apply(kev_currency_format)\n",
+    "\n",
+    "#print to screen\n",
+    "most_profitable_items.head()"
+   ]
   }
  ],
  "metadata": {
